[gd_scene load_steps=2 format=3 uid="uid://dw3xl8tvnehgn"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_ffg5e"]

[node name="Pause menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ffg5e")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 317.0
offset_top = 144.0
offset_right = 957.0
offset_bottom = 534.0
color = Color(0.141176, 0.14902, 0.168627, 0.584314)

[node name="PanelContainer" type="PanelContainer" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 517.0
offset_top = 244.0
offset_right = 767.0
offset_bottom = 394.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="resume" type="Button" parent="PanelContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Resume"

[node name="restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="menu" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
